ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: kubernetes-dashboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    kubernetes.io/tls-acme: 'true'
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
    - hosts:
        - dashboard.khuonviet.vn
      secretName: 'kubernetes-dashboard-cert'
  rules:
    - host: dashboard.khuonviet.vn
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
